--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,10 @@ name: Release to Sonatype
 on:
   push:
     # non-tag merge to main will release a SNAPSHOT
-    branches: [main]
-    tags: [ v.* ]
+    branches:
+      - main
+    tags:
+      - 'v.*'
 
 jobs:
   release:
