--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Check scalafmt rules, publish BOM locally
         run: sbt checkBom
 
-      - name: Check open-source dependencies can be pulled
+      - name: Check dependencies can be pulled
         run: sbt update
