--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,17 +50,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.1.0
 
+      - name: Cache Coursier cache
+        uses: coursier/cache-action@v6.4.0
+
       - name: Set up JDK 17
         uses: coursier/setup-action@v1.3.0
         with:
-          jvm: temurin:1.17.0
+          jvm: temurin:1.17.0.5
+          apps: cs
 
-      - name: Publish
-        run: |-
-          eval "$(ssh-agent -s)"
-          echo $AKKA_RSYNC_GUSTAV | base64 -d > .github/id_rsa
-          chmod 600 .github/id_rsa
-          ssh-add .github/id_rsa
-          sbt publishRsync
-        env:
-          AKKA_RSYNC_GUSTAV: ${{ secrets.AKKA_RSYNC_GUSTAV }}
+      - name: sbt site
+        run: sbt docs/makeSite
+
+      - name: Run Link Validator
+        run: cs launch net.runne::site-link-validator:0.2.3 -- scripts/link-validator.conf
