--- a/.github/link-validator.conf
+++ b/.github/link-validator.conf
@@ -2,13 +2,15 @@
 site-link-validator {
   root-dir = "./docs/target/site/"
   # relative to `root-dir`
-  start-file = "docs/akka-dependencies/snapshot/index.html"
+  start-file = "libraries/akka-dependencies/snapshot/index.html"
 
   # Resolves URLs with the given prefix as local files instead
   link-mappings = [
   ]
 
   ignore-missing-local-files-regex = ""
+
+  ignore-files = []
 
   ignore-prefixes = [
     # GitHub will block with "429 Too Many Requests"
